cmake_minimum_required(VERSION 3.18.1)

add_definitions(-DVK_USE_PLATFORM_ANDROID_KHR)
add_definitions(-DUSE_VULKAN_WRAPPER)
add_definitions(-DENABLE_VALIDATION)
add_definitions(-DENABLE_LOGGING)
add_definitions(-DGLM_FORCE_CXX17)
add_definitions(-DVK_NO_PROTOTYPES)
add_definitions(-DRENDER_SELECTION)

message("Platform = ${ANDROID_PLATFORM}")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -std=c++17 -O3")

# Set path to header files.
include_directories(${ANDROID_NDK}/sources/android/native_app_glue)
include_directories(../../../../../../PreVEngine)
include_directories(../../../../../../PreVEngine/android)
include_directories(../../../../../../PreVEngine/external)
include_directories(../../../../../../PreVEngine/vk_wrapper)
include_directories(../../../../../../Dependencies/glm)
include_directories(../../../../../../Dependencies/assimp/include)

# Set path to source files.
aux_source_directory(${ANDROID_NDK}/sources/android/native_app_glue     SRC_LIST)

aux_source_directory(../../../../..                                         SRC_LIST)
aux_source_directory(../../../../../common                                  SRC_LIST)
aux_source_directory(../../../../../common/intersection                     SRC_LIST)
aux_source_directory(../../../../../component                               SRC_LIST)
aux_source_directory(../../../../../component/common                        SRC_LIST)
aux_source_directory(../../../../../component/camera                        SRC_LIST)
aux_source_directory(../../../../../component/cloud                         SRC_LIST)
aux_source_directory(../../../../../component/font                          SRC_LIST)
aux_source_directory(../../../../../component/light                         SRC_LIST)
aux_source_directory(../../../../../component/particle                      SRC_LIST)
aux_source_directory(../../../../../component/ray_casting                   SRC_LIST)
aux_source_directory(../../../../../component/render                        SRC_LIST)
aux_source_directory(../../../../../component/shadow                        SRC_LIST)
aux_source_directory(../../../../../component/sky                           SRC_LIST)
aux_source_directory(../../../../../component/terrain                       SRC_LIST)
aux_source_directory(../../../../../component/time                          SRC_LIST)
aux_source_directory(../../../../../component/transform                     SRC_LIST)
aux_source_directory(../../../../../component/water                         SRC_LIST)
aux_source_directory(../../../../../scene                                   SRC_LIST)
aux_source_directory(../../../../../scene/light                             SRC_LIST)
aux_source_directory(../../../../../scene/ray_casting                       SRC_LIST)
aux_source_directory(../../../../../scene/robot                             SRC_LIST)
aux_source_directory(../../../../../scene/shadow                            SRC_LIST)
aux_source_directory(../../../../../scene/sky                               SRC_LIST)
aux_source_directory(../../../../../scene/terrain                           SRC_LIST)
aux_source_directory(../../../../../scene/water                             SRC_LIST)
aux_source_directory(../../../../../render                                  SRC_LIST)
aux_source_directory(../../../../../render/animation                        SRC_LIST)
aux_source_directory(../../../../../render/font                             SRC_LIST)
aux_source_directory(../../../../../render/material                         SRC_LIST)
aux_source_directory(../../../../../render/mesh                             SRC_LIST)
aux_source_directory(../../../../../render/model                            SRC_LIST)
aux_source_directory(../../../../../render/pipeline                         SRC_LIST)
aux_source_directory(../../../../../render/util                             SRC_LIST)
aux_source_directory(../../../../../render/util/assimp                      SRC_LIST)
aux_source_directory(../../../../../render/renderer                         SRC_LIST)
aux_source_directory(../../../../../render/renderer/animation               SRC_LIST)
aux_source_directory(../../../../../render/renderer/animation/shader        SRC_LIST)
aux_source_directory(../../../../../render/renderer/animation/pipeline      SRC_LIST)
aux_source_directory(../../../../../render/renderer/common                  SRC_LIST)
aux_source_directory(../../../../../render/renderer/common/shader           SRC_LIST)
aux_source_directory(../../../../../render/renderer/common/pipeline         SRC_LIST)
aux_source_directory(../../../../../render/renderer/debug                   SRC_LIST)
aux_source_directory(../../../../../render/renderer/debug/shader            SRC_LIST)
aux_source_directory(../../../../../render/renderer/debug/pipeline          SRC_LIST)
aux_source_directory(../../../../../render/renderer/font                    SRC_LIST)
aux_source_directory(../../../../../render/renderer/font/shader             SRC_LIST)
aux_source_directory(../../../../../render/renderer/font/pipeline           SRC_LIST)
aux_source_directory(../../../../../render/renderer/normal                  SRC_LIST)
aux_source_directory(../../../../../render/renderer/normal/shader           SRC_LIST)
aux_source_directory(../../../../../render/renderer/normal/pipeline         SRC_LIST)
aux_source_directory(../../../../../render/renderer/particle                SRC_LIST)
aux_source_directory(../../../../../render/renderer/particle/shader         SRC_LIST)
aux_source_directory(../../../../../render/renderer/particle/pipeline       SRC_LIST)
aux_source_directory(../../../../../render/renderer/shadow                  SRC_LIST)
aux_source_directory(../../../../../render/renderer/shadow/shader           SRC_LIST)
aux_source_directory(../../../../../render/renderer/shadow/pipeline         SRC_LIST)
aux_source_directory(../../../../../render/renderer/sky                     SRC_LIST)
aux_source_directory(../../../../../render/renderer/sky/shader              SRC_LIST)
aux_source_directory(../../../../../render/renderer/sky/pipeline            SRC_LIST)
aux_source_directory(../../../../../render/renderer/terrain                 SRC_LIST)
aux_source_directory(../../../../../render/renderer/terrain/shader          SRC_LIST)
aux_source_directory(../../../../../render/renderer/terrain/pipeline        SRC_LIST)
aux_source_directory(../../../../../render/renderer/water                   SRC_LIST)
aux_source_directory(../../../../../render/renderer/water/shader            SRC_LIST)
aux_source_directory(../../../../../render/renderer/water/pipeline          SRC_LIST)

aux_source_directory(../../../../../../PreVEngine/prev                       SRC_LIST)
aux_source_directory(../../../../../../PreVEngine/prev/common                SRC_LIST)
aux_source_directory(../../../../../../PreVEngine/prev/common/pattern        SRC_LIST)
aux_source_directory(../../../../../../PreVEngine/prev/core                  SRC_LIST)
aux_source_directory(../../../../../../PreVEngine/prev/core/device           SRC_LIST)
aux_source_directory(../../../../../../PreVEngine/prev/core/instance         SRC_LIST)
aux_source_directory(../../../../../../PreVEngine/prev/core/memory           SRC_LIST)
aux_source_directory(../../../../../../PreVEngine/prev/event                 SRC_LIST)
aux_source_directory(../../../../../../PreVEngine/prev/event/internal        SRC_LIST)
aux_source_directory(../../../../../../PreVEngine/prev/input                 SRC_LIST)
aux_source_directory(../../../../../../PreVEngine/prev/input/keyboard        SRC_LIST)
aux_source_directory(../../../../../../PreVEngine/prev/input/mouse           SRC_LIST)
aux_source_directory(../../../../../../PreVEngine/prev/input/touch           SRC_LIST)
aux_source_directory(../../../../../../PreVEngine/prev/render                SRC_LIST)
aux_source_directory(../../../../../../PreVEngine/prev/render/image          SRC_LIST)
aux_source_directory(../../../../../../PreVEngine/prev/render/buffer         SRC_LIST)
aux_source_directory(../../../../../../PreVEngine/prev/render/buffer/image   SRC_LIST)
aux_source_directory(../../../../../../PreVEngine/prev/render/pass           SRC_LIST)
aux_source_directory(../../../../../../PreVEngine/prev/render/shader         SRC_LIST)
aux_source_directory(../../../../../../PreVEngine/prev/render/sampler        SRC_LIST)
aux_source_directory(../../../../../../PreVEngine/prev/scene                 SRC_LIST)
aux_source_directory(../../../../../../PreVEngine/prev/scene/component       SRC_LIST)
aux_source_directory(../../../../../../PreVEngine/prev/scene/graph           SRC_LIST)
aux_source_directory(../../../../../../PreVEngine/prev/util                  SRC_LIST)
aux_source_directory(../../../../../../PreVEngine/prev/window                SRC_LIST)
aux_source_directory(../../../../../../PreVEngine/prev/window/impl           SRC_LIST)
aux_source_directory(../../../../../../PreVEngine/prev/window/impl/android   SRC_LIST)
aux_source_directory(../../../../../../PreVEngine/prev/window/impl/xcb       SRC_LIST)
aux_source_directory(../../../../../../PreVEngine/prev/window/impl/windows   SRC_LIST)

aux_source_directory(../../../../../../PreVEngine/android                    SRC_LIST)
aux_source_directory(../../../../../../PreVEngine/vk_wrapper                 SRC_LIST)
aux_source_directory(../../../../../../PreVEngine/external                   SRC_LIST)

# Create native shared library
add_library(native SHARED ${SRC_LIST})

file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/../../../../../../Dependencies/assimp/lib/Android/libassimp.so" DESTINATION "${CMAKE_CURRENT_SOURCE_DIR}/../libs/arm64-v8a/")

# add external library
add_library(assimp SHARED IMPORTED)
set_target_properties(assimp PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/../libs/arm64-v8a/libassimp.so)

# Link to external libraries
target_link_libraries(native log android assimp)

